fixed nav bug on mobile

--- a/assets/global.styl
+++ b/assets/global.styl
@@ -331,7 +331,7 @@ body
 									top 0 !important
 									left 0 !important
 									display inline-block !important
-									padding 0
+									padding 0 !important
 									
 									&:before
 										content ':'
